--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 13 13:47:05 CET 2025
-sdk.dir=C\:\\Users\\marcu\\AppData\\Local\\Android\\Sdk
+#Mon Jan 13 14:38:24 CET 2025
+sdk.dir=/Users/franzhuber/Library/Android/sdk
